- Finalized styling on index.html - Fixed Contrast issues found by WAVE. - Fixed an issue with the pancake's html not having a propert language tag. - Updated content-card.html with the latest iteration of the html structure. - Added hover and focus sub-classes to top-bar a. - Added body and card background color properties. - Added a hover and focus sub-classes to index.css - Added some more color and size properties to global-props.css

--- a/styles/global-props.css
+++ b/styles/global-props.css
@@ -29,20 +29,29 @@
   /* Font Sizes */
   --fs-heading: 3rem;
   --fs-subheading: 2rem;
+  --fs-summary: 1.6rem;
   --fs-link: 1.4rem;
 
   /* Text Line Heights */
   --lh-heading: 2.2rem;
   --lh-default: 1.6rem;
 
+  /* Lists */
+  --ls-indentation: 1.1rem;
+
   /* Font Colors */
   --clr-f-heading: var(--accent-500);
   --clr-f-strong: var(--accent-900);
-  --clr-f-link: var(--accent-500);
+  --clr-f-link: var(--accent-700);
+  --clr-f-link--hovered: var(--accent-800);
+  --clr-f-link--focused: var(--accent-900);
   --clr-f-button: var(--primary-900);
-  --clr-f-button--focused: var(--accent-500);
+  --clr-f-button--hovered: var(--text-50);
+  --clr-f-button--focused: var(--text-50);
   --clr-f-tp: var(--text-50);
 
-  /* Lists */
-  --ls-indentation: 1.1rem;
+  /* Background Colors */
+  --clr-bg-button: var(--background-300);
+  --clr-bg-button--hovered: var(--background-500);
+  --clr-bg-button--focused: var(--background-700);
 }
