--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,9 @@
 
 :root {
   --h-page-intro: 100vh;
+
+  --clr-bg-body: var(--background-400);
+  --clr-bg-card: var(--background-100);
 }
 
 /**********************************************************/
@@ -23,6 +26,8 @@ h3 {
 
   line-height: var(--lh-heading);
   padding-bottom: var(--spacing-sm);
+
+  color: var(--accent-800);
 }
 
 strong {
@@ -42,8 +47,46 @@ ul[role="list"] {
 
 a {
   color: var(--clr-f-link);
+  text-decoration: none;
 }
 
+a:hover {
+  color: var(--clr-f-link--hovered);
+  text-decoration: underline;
+}
+
+a:focus {
+  color: var(--clr-f-link--focused);
+  text-decoration: underline;
+}
+
+/**********************************************************/
+/*                     Utility                            */
+/**********************************************************/
+
+.u-button {
+  text-decoration: none;
+
+  color: var(--clr-f-button);
+  background-color: var(--clr-bg-button);
+
+  border-radius: var(--border-rounded-sm);
+  padding: var(--spacing-xs)
+}
+
+.u-button:hover {
+  text-decoration: none;
+
+  color: var(--clr-f-button--hovered);
+  background-color: var(--clr-bg-button--hovered);
+}
+
+.u-button:focus {
+  text-decoration: none;
+
+  color: var(--clr-f-button--focused);
+  background-color: var(--clr-bg-button--focused);
+}
 /**********************************************************/
 /*                     Blocks                             */
 /**********************************************************/
@@ -57,6 +100,8 @@ a {
   border: var(--debug-selector-element);
 
   grid-template-areas: "preview";
+
+  background-color: black;
 }
 
 .intro-preview {
@@ -67,7 +112,7 @@ a {
   height: var(--h-page-intro);
   width: 100%;
 
-  filter: brightness(30%);
+  filter: brightness(25%);
 }
 
 .intro-header {
@@ -87,6 +132,7 @@ a {
 
 .intro-summary {
   color: var(--text-50);
+  font-size: var(--fs-summary);
 }
 
 .content {
@@ -94,40 +140,81 @@ a {
   margin-inline: 10vw;
 }
 
+.content-header {
+  margin-block-end: 2rem;
+}
+
+.content-heading {
+  font-size: var(--fs-heading);
+}
+
 .content-collection {
   display: grid;
   gap: 2rem;
 
-  grid-template-columns: repeat(auto-fit, minmax(35ch, 1fr));
+  grid-template-columns: repeat(2, minmax(35ch, 1fr));
 }
 
 .content-card {
   display: grid;
-  grid-template-columns: subgrid;
-  gap: 3rem;
+  gap: 1.5rem;
+  align-content: space-between;
 
-  align-content: start;
+  background-color: var(--clr-bg-card);
+  border-radius: var(--border-rounded-md);
+
+  > img {
+    order: -1;
+
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
+    border-start-start-radius: inherit;
+    border-start-end-radius: inherit;
+  }
+
+  .content-card__text {
+    display: grid;
+    justify-items: start;
+    align-items: start;
+
+    padding-inline: 1rem;
+    padding-block-end: 1rem;
+  }
+
+  .content-card__button {
+    margin-inline-start: auto;
+    margin-block-start: auto;
+  }
 }
 
 .content-card[data-type="featured"] {
-  grid-template-columns: subgrid;
-  align-content: stretch;
+  align-items: center;
+  justify-items: start;
 
   grid-column: span 2;
   grid-row: span 2;
 
-  .content-card__heading > img {
-    grid-column: span 2;
-    grid-row: span 2;
-  }
-}
+  gap: 0;
 
-.content-card__heading {
-  display: grid;
   > img {
-    order: 1;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+    grid-column: -3;
+
+    border-start-end-radius: 0;
+    border-end-start-radius: var(--border-rounded-md);
+  }
+
+  .content-card__text {
+    display: grid;
+    justify-content: center;
+    min-height: inherit;
+    padding-block: 1rem;
+    gap: 1rem;
+  }
+
+  .content-card__button {
+    margin-inline-start: inherit;
+    margin-block-start: inherit;
   }
 }
