--- a/styles/recipe.css
+++ b/styles/recipe.css
@@ -8,7 +8,7 @@
 
 :root {
   /* Background Colors */
-  --clr-bg-body: var(--background-50);
+  --clr-bg-body: var(--background-400);
   --clr-bg-page: var(--background-100);
   --clr-bg-callout: var(--background-200);
 
@@ -63,6 +63,17 @@ ul[role="list"] {
 
 a {
   color: var(--clr-f-link);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--clr-f-link--hovered);
+  text-decoration: underline;
+}
+
+a:focus {
+  color: var(--clr-f-link--focused);
+  text-decoration: underline;
 }
 
 /**********************************************************/
